# recommenders

./: .amlignore  .gitignore  .gitmodules  .readthedocs.yaml  =7.6  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Diabeties Prediction.ipynb  Energy_Consumption_Prediction.ipynb  GLOSSARY.md  INSTALL.md  LICENSE  MANIFEST.in  NEWS.md  NOTICE.txt  README.md  SECURITY.md  SETUP.md  Surprise_SVD_vs_SAR.ipynb  TEMP.html  TESTS.md  azure-pipeline.yml  azure-pipelines.yml  conda.md  conda.sh  datasets.html  dev-requirements.txt  environment.yml  evaluation.html  fix.txt  genindex.html  intro.html  models.html  myenv2.yaml  myenv_sparkml.py  objects.inv  py-modindex.html  pyproject.toml  (+12 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: .codecov.yml  CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-ask.md
.github/workflows/: amk-unit-tests.yml  aml-cpu-nightly.yml  aml-cpu-unit-test.yml  aml-gpu-nightly.yml  aml-gpu-unit-test.yml  aml-nightly.yml  aml-notebooks-spark-unit-test.yml  aml-spark-nightly.yml  aml-test.yml  aml-unit-tests.yml  azureml-cpu-nightly-composite-actions.yml  azureml-cpu-nightly.yml  azureml-gpu-nightly-composite-actions.yml  azureml-gpu-nightly.yml  azureml-nightly.yml  azureml-release-pipeline.yml  azureml-spark-nightly-composite-actions.yml  azureml-spark-nightly.yml  azureml-template.yml  azureml-unit-tests-composite-actions.yml  main.yml  (+10 more)
.newsrec/: pyvenv.cfg
EDA_notebooks/: Meenu_NewsRec_EDA.ipynb
_modules/: index.html
_static/: mystnb.8ecb98da25f57f5357bf6f572d296f466b2cfe2517ffebfabe82451661e28f02.css  sphinx-thebe.js  tabs.css  togglebutton.js  webpack-macros.html
benchmarks/: README.md  benchmark_utils.py  movielens.ipynb
contrib/: README.md  StandardVAE
cpp/: CMakeLists.txt  SAR.cxx  SAR.h  main.cxx
cpp-cache/: build.sbt  readme.MD  sample.txt
cpp/cmake_modules/: FindArrow.cmake  FindParquet.cmake
docker/: Dockerfile  README.md
docs/: .readthedocs.yaml  Makefile  README.md  _config.yml  _toc.yml  conf.py  datasets.rst  evaluation.rst  index.rst  intro.md  markdown-notebooks.md  markdown.md  models.rst  notebooks.ipynb  references.bib  requirements-doc.txt  requirements.txt  tuning.rst  utils.rst
examples/: README.md  SCENARIO_ADS.md  generate_dataset.py  run_notebook_on_azureml.ipynb  template.ipynb  try_SAR.py  try_deeprec.py  try_dkn.py
examples/07_tutorials/ai-reco-of-recos/: LICENSE  README.md  env.sample  master_reco.ipynb  o3_recos.md  pyproject.toml  requirements.txt
examples/07_tutorials/ai-reco-of-recos/master_reco/: master_reco_models.py
examples/07_tutorials/ai-reco-of-recos/prompts/: action_plan.txt  reco_selection.txt  reco_selection_with_data.txt  scenarios.txt
examples/07_tutorials/ai-reco-of-recos/utils/: file_utils.py  openai_data_models.py  openai_utils.py
jobs/: build.yml  build_darwin.sh  build_linux.sh
mlhub/: Makefile  rbm.md  rbm.py  rbm.yaml  recutils.py  sar.md  sar.py  sar.yaml
notebooks/: README  README.md  SAR_pySpark_MovieLens.ipynb  SAR_singleNode_MovieLens.ipynb  als_deep_dive.ipynb  configuration.ipynb  run_notebook_on_azureml.ipynb  sar_singlenode_movielens.ipynb  sar_sql2_example_simple.ipynb  sar_sql_example_simple.ipynb  template.ipynb
publications/: jmlr2e.sty  recommender.tex  references.bib
reco_utils/: README.md  __init__.py  setup.py
recommenders/: README.md  __init__.py
recommenders.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sar-udf/: README.rst  setup.py
sarplus/: README.md
scenarios/: COLD_START.md  GLOSSARY.md  README.md  SCENARIO_RETAIL.md
scripts/: conda2requirements.py  create_workspace.py  databricks_install.py  databricks_install.sh  generate_conda_file.py  generate_conda_file.sh  install.sh  notebook_launcher.py  prepare_databricks_cluster.ipynb  prepare_databricks_for_o16n.sh
src/: reco_utils
tests/: README.md  __init__.py  conftest.py  ncf_common.py  notebooks_common.py  rbm_common.py  sar_common.py
tools/: =7.6  databricks_install.py  generate_conda_file.py  generate_requirements_txt.py
(+1734 files in other folders)
