[build-system]
requires = [
    "setuptools>=52",
    "wheel>=0.36",
    "numpy>=1.15",
]
dependencies = [
    "setuptools>=52",
    "wheel>=0.36",
    "numpy>=1.15",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "deeprec: tests for deeprec model",
    "experimental",
    "flaky: flaky tests that can fail unexpectedly",
    "gpu: tests running on GPU",
    "integration: integration tests",
    "notebooks: tests for notebooks",
    "sequential",
    "smoke: smoke tests"
    "spark: tests that requires Spark",
    "vw: tests for vowpal wabbit",
]