[project]
name = "master_reco"
version = "0.1.0"
description = "Master Reco"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    # Add development dependencies here, e.g., "pytest"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

